# Math2Model

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  build.sh  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  uno.config.ts  vite.config.ts  vue.config.ts
.github/workflows/: deploy.yml  rust.yml
docs/: exporter.md  graph-based-shapes.md  index.md  programmatic-shapes.md  ui-overview.md
docs/.vitepress/: config.ts
mesh2gim/: .gitignore  Cargo.toml  README.md
mesh2gim/src/: lib.rs  main.rs  parametrization.rs
parametric-renderer-core/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
parametric-renderer-core/.cargo/: config.toml
parametric-renderer-core/copy-includes/: Cargo.toml  README.md
parametric-renderer-core/copy-includes/src/: lib.rs  main.rs
parametric-renderer-core/desktop/: Cargo.toml  README.md  build.rs
parametric-renderer-core/desktop/src/: application.rs  buffer.rs  config.rs  main.rs  mesh.rs  quad.rs  shader.wgsl  shaders.rs
parametric-renderer-core/desktop/src/camera/: camera.rs  camera_settings.rs  freecam_controller.rs  mod.rs
parametric-renderer-core/graphs/: BasicGraph.graph  BasicGraphShader.graph.wgsl  Cube.graph.wgsl  Cylinder.graph.wgsl  Heart.graph  Heart.graph.wgsl  HeartSphere.graph  HeartSphere.graph.wgsl  NoiseFunction.wgsl  Plane.graph.wgsl  Sphere.graph  Sphere.graph.wgsl
parametric-renderer-core/renderer-core/: Cargo.toml  README.md  build.rs
parametric-renderer-core/renderer-core/benches/: gpu_bench.rs
parametric-renderer-core/renderer-core/src/: application.rs  buffer.rs  game.rs  lib.rs  local_executor.rs  mesh.rs  reactive.rs  renderer.rs  shaders.rs  texture.rs  time.rs  transform.rs  window_or_fallback.rs
parametric-renderer-core/renderer-core/src/application/: frame_counter.rs  scene.rs  virtual_model.rs  wgpu_context.rs  window_or_fallback.rs
parametric-renderer-core/renderer-core/src/camera/: angle.rs  camera.rs  camera_and_settings.rs  camera_controller.rs  camera_settings.rs  freecam_controller.rs  mod.rs  orbitcam_controller.rs
parametric-renderer-core/renderer-core/src/input/: current_input.rs  cursor_capture.rs  mod.rs  winit_helper.rs
parametric-renderer-core/renderer-core/src/reactive/: cacher.rs  derived_set.rs  for_each.rs  gpu_view.rs  memo_computed.rs  signal_vec.rs  signal_vec_old.rs
parametric-renderer-core/renderer-core/src/renderer/: compilation_message.rs  frame_counter.rs  frame_data.rs  ground_plane.rs  scene.rs  shader_compiler.rs  shader_server.rs  skybox.rs  virtual_model.rs  wgpu_context.rs
parametric-renderer-core/renderer-core/src/shaders/: common.wesl  compute_patches.wesl  copy_patches.wesl  gltf_pbr.wesl  render_patches.wgsl  sample_object_dummy.wesl
parametric-renderer-core/renderer-core/src/time/: time_counters.rs
parametric-renderer-core/shaders/: Common.wgsl  ComputePatches.wgsl  ComputePatchesFinal.wgsl  CopyPatches.wgsl  DefaultParametric.wgsl  EvaluateImage.wgsl  GroundPlane.wgsl  HeartSphere.wgsl  Shader.wgsl  Skybox.wgsl
parametric-renderer-core/shaders/showcase/: heart.wgsl  johannes-heart.wgsl  palm-tree-trunk.wgsl  palm-tree.wgsl  scene.json  seashell.wgsl  spherehog.wgsl
parametric-renderer-core/wasm/: Cargo.toml  README.md
parametric-renderer-core/wasm/.cargo/: config.toml
parametric-renderer-core/wasm/src/: application.rs  lib.rs  wasm_abi.rs
parametric-renderer-core/web/: Cargo.toml
parametric-renderer-core/web/src/: application.rs  lib.rs
patches/: @babylonjs+core+7.3.2.patch
shadertoy/: README.md  angular.json  package-lock.json  package.json
shadertoy/src/: index.html  main.ts  styles.css
shadertoy/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/: App.vue  babylon.ts  disposable-stack.ts  engine.ts  fine-collections.ts  globals.ts  main.ts  monaco-setup.ts  notification.ts  option.ts  webgpu-hook.ts
src/assets/: main.css
src/assets/nodes/: attributions.md
src/components/: BabylonScene.vue  CodeEditor.vue  EditorAndOutput.vue  EditorTab.vue  FileBrowser.vue  FocusObject.vue  HelloWorld.vue  ImportDialog.vue  LabeledFormItem.vue  SceneHierarchy.vue  SingleFile.vue  TooltippedIconButton.vue  TopBar.vue  VirtualModel.vue  WebGpu.vue  filter-instance.wgsl  indirect_dispatch_rebalance.wgsl  lod_stage.wgsl  output_patches_stage.wgsl  prep_vertices_stage.wgsl  use-open-file.ts  vertices_stage.wgsl  webgpu-helpers.ts
src/components/exporter/: EdgeAnalysis.ts  Exporter.ts  FileDownload.ts  GPUInteractionExport.ts  GPUUtils.ts  MeshExporter3DFormats.ts  VectorTypes.ts  VertexType.ts
src/components/input/: AngleInput.vue  ColorInput.vue  EulerInput.vue  NumberInput.vue  VectorInput.vue  object-update.ts  vector-labels.ts
src/components/node-tree/: NodeTree.vue  NodeTreeHelper.ts  NodeTreeRender.vue  SingleFile.vue
src/components/visual-programming/: CodeGraph.vue  MultipleNodesCollapsable.vue  NodesDock.vue  SingleNodeDisplay.vue
src/content-store/: content-file.ts  content-fs-sync.ts  content-store.test.ts  content-store.ts
src/engine/: babylon-engine-promise.ts  babylon-engine.ts  babylon-helpers.ts  engine.ts  input-manager.ts  mesh.ts  sync-filesystem.ts  wgpu-engine.ts
src/filesystem/: cache-file.ts  reactive-files.ts  scene-file.ts  scene-files.ts  shader-files.ts  start-files.ts
src/router/: index.ts
src/scenes/: BaseScene.ts  ModelDisplayVirtualScene.ts  ModelDisplayVirtualScene.vert.wgsl  MyFirstScene.ts  ObjectData.ts  RuntimeMesh.ts  VirtualModel.ts  VirtualScene.ts  aggregrate-model-state.ts  default-scene.ts  editable-scene.ts  example-scenes.ts  scene-state.ts
src/sceneview/: writeablemodelstate.ts
src/shaders/: Common.wgsl  DefaultParametric.wgsl  shader-processor.ts
src/stores/: error-store.ts  export-store.ts  fs-store.ts  hot-cache.ts  store.ts
src/views/: HomeView.vue  NotFoundView.vue  WgpuHomeView.vue  router.ts
src/vpnodes/: blocks.ts  custom-zoom.ts  nodes-list.ts  nodes.ts
(+77 files in other folders)
