[package]
name = "mesh2gim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", default-features = false, features = [
  "std",
  "derive",
] }
glam = "0.27.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
miniserde = "0.1"
obj-rs = { version = "0.7.1", default-features = false }
thiserror = "1.0.61"
