[workspace]
members = ["copy-includes", "desktop", "renderer-core", "wasm"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
indexmap = "2.6.0"
nanoserde = "0.1.37"
reactive_graph = { version = "0.1.0-gamma3", features = ["effects"] }
thiserror = "1.0"
tracing = { version = "0.1.40" }
uuid = { version = "1.11.0", features = ["v4"] }
wgpu = { version = "22.1.0", default-features = false, features = [
  "webgpu",
  "wgsl",
] }
winit = { version = "0.30.5" }

[patch.crates-io]
any_spawner = { git = "https://github.com/stefnotch/leptos", branch = "fixed" }
