[workspace]
members = ["copy-includes", "desktop", "renderer-core", "wasm"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
indexmap = "2.6.0"
log = "0.4.22"
reactive_graph = { version = "0.1.0-rc3", features = ["effects"] }
uuid = { version = "1.11.0", features = ["v4"] }
wgpu = { version = "23.0.1", default-features = false }
winit = { version = "0.30.5" }

[patch.crates-io]
any_spawner = { git = "https://github.com/leptos-rs/leptos", branch = "main" }


[profile.release]
debug = true
