[workspace]
members = ["desktop", "renderer-core", "wasm"]
resolver = "3"

[workspace.dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
indexmap = "2.7.1"
log = "0.4.26"
reactive_graph = { version = "0.1.7", features = ["effects"] }
uuid = { version = "1.15.1", features = ["v4"] }
wgpu = { version = "24.0.1", default-features = false }
winit = { version = "0.30.9" }

[profile.release]
debug = true
