[package]
default-run = "desktop"
edition = "2021"
name = "desktop"
version = "0.2.0"

[dependencies]
any_spawner = { version = "0.1.1", features = ["futures-executor"] }
anyhow = "1.0"
glam = { workspace = true }
nanoserde = "0.1.37"
renderer-core = { path = "../renderer-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "smallvec",
  "fmt",
  "std",
] }
wgpu = { workspace = true }
wgpu-profiler = "0.18.2"
winit = { workspace = true }

[features]
default = []
tracy = ["renderer-core/tracy"]
