[package]
default-run = "desktop"
edition = "2021"
name = "desktop"
version = "0.2.0"

[dependencies]
any_spawner = { version = "0.2.0-rc3", features = ["futures-executor"] }
anyhow = "1.0.93"
env_logger = { version = "0.11.5", default-features = false }
glam = { workspace = true }
log = { workspace = true }
nanoserde = "0.1.37"
renderer-core = { path = "../renderer-core", features = ["desktop"] }
wgpu = { workspace = true, features = ["wgsl"] }
wgpu-profiler = "0.19.0"
winit = { workspace = true }

[features]
default = []
