[package]
build = "build.rs"
edition = "2021"
name = "renderer-core"
version = "0.2.0"

[lib]
bench = false

[dependencies]
# wgsl-parser = "0.5.0"
any_spawner = { version = "0.1.1" }
anyhow = "1.0"
bytemuck = { workspace = true }
encase = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
notify-debouncer-full = { version = "0.4.0", optional = true }
pinky-swear = "6.2.0"
reactive_graph = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
web-sys = { version = "0.3.72", optional = true, features = [
    "HtmlCanvasElement",
] }
web-time = "1.1.0"
wgpu = { workspace = true }
wgpu-profiler = "0.19.0"
winit = { workspace = true }

[dev-dependencies]
any_spawner = { version = "0.1.1", features = ["futures-executor"] }
criterion2 = "2.0.0"
pollster = "0.4.0"

[[bench]]
harness = false
name = "gpu_bench"

[build-dependencies]
wgsl_to_wgpu = { version = "0.11.0", git = "https://github.com/ScanMountGoat/wgsl_to_wgpu", branch = "main" }

[features]
default = []
desktop = ["notify-debouncer-full"]
tracy = ["wgpu-profiler/tracy"]
wasm-bindgen = ["web-sys"]
