[package]
build = "build.rs"
edition = "2021"
name = "renderer-core"
version = "0.2.0"

[lib]
bench = false

[dependencies]
any_spawner = { version = "0.2.0" }
anyhow = "1.0"
bytemuck = { workspace = true }
encase = { workspace = true }
futures-channel = "0.3.31"
glam = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
notify-debouncer-full = { version = "0.5.0", optional = true }
reactive_graph = { workspace = true }
uuid = { workspace = true }
web-sys = { version = "0.3.77", optional = true, features = [
    "HtmlCanvasElement",
] }
web-time = "1.1.0"
wgpu = { workspace = true }
wgpu-profiler = "0.21.0"
winit = { workspace = true }

[dev-dependencies]
any_spawner = { version = "0.2.0-rc3", features = ["futures-executor"] }
criterion2 = "2.0.0"
pollster = "0.4.0"

[[bench]]
harness = false
name = "gpu_bench"

[build-dependencies]
wgsl_to_wgpu = { version = "0.13.0" }

[features]
default = []
desktop = ["notify-debouncer-full"]
wasm-bindgen = ["web-sys"]
