[package]
build = "build.rs"
edition = "2024"
name = "renderer-core"
version = "0.2.0"

[lib]
bench = false

[dependencies]
any_spawner = { version = "0.2.0" }
anyhow = "1.0"
bytemuck = { workspace = true }
encase = { workspace = true }
futures-channel = "0.3.31"
glam = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
notify-debouncer-full = { version = "0.5.0", optional = true }
reactive_graph = { workspace = true }
uuid = { workspace = true }
web-time = "1.1.0"
wgpu = { workspace = true }
wgpu-profiler = "0.21.1"
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = [
    "ImageBitmap",
    "HtmlCanvasElement",
] }

[dev-dependencies]
any_spawner = { version = "0.2.0-rc3", features = ["futures-executor"] }
criterion2 = "3.0.0"
pollster = "0.4.0"

[[bench]]
harness = false
name = "gpu_bench"

[build-dependencies]
wgsl_to_wgpu = { version = "0.13.0" }

[features]
default = []
desktop = ["notify-debouncer-full"]
