[package]
edition = "2021"
name = "web"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.1.1", features = ["wasm-bindgen"] }
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
# Needed for the UUID crate that the renderer-core uses
getrandom = { version = "0.2.15", features = ["js"] }
glam = { workspace = true }
renderer-core = { path = "../renderer-core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "smallvec",
  "fmt",
  "std",
  "time",
  "json",
] }
tracing-web = "0.1.3"
tsify-next = "0.5.4"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["HtmlCanvasElement"] }
wgpu = { workspace = true }
winit = { workspace = true }
