[package]
edition = "2021"
name = "web"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.2.0", features = ["wasm-bindgen"] }
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
# Needed for the UUID crate that the renderer-core uses
glam = { workspace = true }
log = { workspace = true }
renderer-core = { path = "../renderer-core", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify-next = "0.5.5"
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "HtmlCanvasElement",
  "ImageBitmap",
] }
wgpu = { workspace = true, features = [
  "webgpu",
  "fragile-send-sync-non-atomic-wasm",
] }
winit = { workspace = true }
