[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.83"
console_error_panic_hook = "0.1.7"
glam = { workspace = true }
glamour = { workspace = true }
renderer-core = { path = "../renderer-core" }
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
wgpu = { workspace = true }
winit = { workspace = true }
winit_input_helper = { workspace = true }
